--- a/src/App.css
+++ b/src/App.css
@@ -2,37 +2,63 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
+.content {
+  /*background-color: #282c34;*/
+  background: radial-gradient(circle, #282c34 0%, #131518);
   min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+  /*justify-content: center;*/
   font-size: calc(10px + 2vmin);
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.search{
+  padding: 1rem;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+input{
+  color: white;
+  padding: .5rem 1.1rem;
+  font-size: 0.95rem;
+  border-radius: 25px;
+  border: 1px solid rgba(255,255,255,0.6);
+  background: rgba(255,255,255,0.1);
 }
+
+input::placeholder{
+  color: rgba(255,255,255,0.6);
+}
+
+input:focus{
+  outline: none
+}
+
+
+.location{
+  font-size: 3rem;
+}
+
+.icon{
+  margin-top: -60px;
+  margin-bottom: -110px;
+  opacity: 0.6;
+}
+
+.current-temp{
+  font-size: 3rem;
+}
+
+.weather-type{
+  font-size: 2.2rem;
+  margin-top: -45px;
+}
+
+.extremities{
+  font-size: 1.6rem;
+  margin-top: -20px;
+}
+
+
